--- a/trunk/.settings/org.eclipse.jdt.ui.prefs
+++ b/trunk/.settings/org.eclipse.jdt.ui.prefs
@@ -1,4 +1,4 @@
-#Mon Apr 27 09:16:51 EDT 2009
+#Fri May 01 13:41:49 EDT 2009
 cleanup.add_default_serial_version_id=true
 cleanup.add_generated_serial_version_id=false
 cleanup.add_missing_annotations=true
@@ -52,7 +52,7 @@ cleanup.use_this_for_non_static_method_access_only_if_necessary=true
 cleanup_profile=org.eclipse.jdt.ui.default.eclipse_clean_up_profile
 cleanup_settings_version=2
 eclipse.preferences.version=1
-formatter_profile=org.eclipse.jdt.ui.default.eclipse_profile
+formatter_profile=_lawu
 formatter_settings_version=11
 org.eclipse.jdt.ui.exception.name=e
 org.eclipse.jdt.ui.gettersetter.use.is=true
