Removed "standard" doclet because it just delegated to HtmlDoclet, removed toolkit use warning
git-svn-id: http://lawu.googlecode.com/svn@20 56f80a26-1f45-11de-82b5-194b17410922

--- a/trunk/build.xml
+++ b/trunk/build.xml
@@ -81,7 +81,7 @@
 			<link href="http://java.sun.com/javase/6/docs/api/"/>
 			<link href="http://java.sun.com/javase/6/docs/jdk/api/javadoc/doclet/"/>
 			
-			<doclet name="lawu.doclets.standard.Standard" path="${dist.dir}/${jar.name}"/>
+			<doclet name="lawu.doclets.formats.html.HtmlDoclet" path="${dist.dir}/${jar.name}"/>
 		</javadoc>
 	</target>
 
