I can't do these translations at this time :(
git-svn-id: http://lawu.googlecode.com/svn@23 56f80a26-1f45-11de-82b5-194b17410922

--- a/trunk/res/lawu/doclets/formats/html/resources/standard.properties
+++ b/trunk/res/lawu/doclets/formats/html/resources/standard.properties
@@ -1,7 +1,7 @@
 #
 # @(#)standard.properties	1.116 05/10/29
 #
-doclet.build_version=Standard Doclet version {0}
+doclet.build_version=Custom Doclet version {0}
 doclet.Contents=Contents
 doclet.Overview=Overview
 doclet.Window_Overview=Overview List
@@ -119,7 +119,7 @@ doclet.Following_From_Class=Following copied from class: {0}
 doclet.Following_From_Interface=Following copied from interface: {0}
 doclet.Description_From_Interface=Description copied from interface: {0}
 doclet.Description_From_Class=Description copied from class: {0}
-doclet.Standard_doclet_invoked=Standard doclet invoked...
+doclet.Standard_doclet_invoked=Custom doclet invoked...
 doclet.No_Non_Deprecated_Classes_To_Document=No non-deprecated classes found to document.
 doclet.Interfaces_Italic=Interfaces (italic)
 doclet.Enclosing_Class=Enclosing class:
@@ -154,7 +154,7 @@ doclet.Help_line_25=Frames/No Frames
 doclet.Help_line_26=These links show and hide the HTML frames.  All pages are available with or without frames.
 doclet.Help_line_27=Each serializable or externalizable class has a description of its serialization fields and methods. This information is of interest to re-implementors, not to developers using the API. While there is no link in the navigation bar, you can get to this information by going to any serialized class and clicking "Serialized Form" in the "See also" section of the class description.
 doclet.Help_line_28=The <a href="constant-values.html">Constant Field Values</a> page lists the static final fields and their values.
-doclet.Help_line_29=This help file applies to API documentation generated using the standard doclet.
+doclet.Help_line_29=This help file applies to API documentation generated using this custom doclet.
 doclet.Help_enum_line_1=Each enum has its own separate page with the following sections:
 doclet.Help_enum_line_2=Enum declaration
 doclet.Help_enum_line_3=Enum description
