Chemistry framework continued (including beginnings of PDB reading), bug fixes in FilteredIterator, added UnresettableIteratorException to remove the necessity of saving visited elements for iterators with unresettable backing
git-svn-id: http://lawu.googlecode.com/svn@30 56f80a26-1f45-11de-82b5-194b17410922

--- a/trunk/build.xml
+++ b/trunk/build.xml
@@ -60,7 +60,7 @@
 		</jar>
 	</target>
 	
-	<target name="doc" description="generates Javadocs for the project" depends="bin-dist">
+	<target name="doc" description="generates Javadocs for the project">
 		<javadoc
 			access="package"
 			author="true"
