Adding framework for parsing command-line arguments. Some changes to PDB code generation.
git-svn-id: http://lawu.googlecode.com/svn@41 56f80a26-1f45-11de-82b5-194b17410922

--- a/trunk/res/lawu/nls/str.properties
+++ b/trunk/res/lawu/nls/str.properties
@@ -4,7 +4,7 @@ Vector.0=(%.3f, %.3f, %.3f)
 Quaternion.0=(%.3f, %.3f, %.3f, %.3f)
 
 # the project website
-project.uri=http://code.google.com/p/lawu/
+project.uri=http://lawu.googlecode.com/
 
 # the project version
 project.version=0.0.2
