--- a/trunk/build.xml
+++ b/trunk/build.xml
@@ -1,17 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project default="bin-dist" name="lawu">
-	<property name="src.dir" value="src"/>
-	<property name="doc.dir" value="doc"/>
-	<property name="bin.dir" value="bin"/>
-	<property name="dist.dir" value="dist"/>
-	<property name="res.dir" value="res"/>
-	<property name="tmp.dir" value="tmp"/>
+	<description>
+		Ant build file for the ${ant.project.name} project
+	</description>
 	
-	<property name="jar.name" value="${ant.project.name}.jar"/>
-	<property name="src.main" value="lawu.app.Main"/>
+	<property file="build.properties"/>
 		
-	<fileset id="src.fileset" dir="." excludes="${dist.dir}/**,${bin.dir}/**,${doc.dir}/**,${tmp.dir}/**"/>
-	
+	<fileset id="src.fileset" dir="." excludes="${dist.dir}/**,${bin.dir}/**,${doc.dir}/**"/>
+
 	<target name="clean-bin" description="removes the build directory">
 		<delete dir="${bin.dir}"/>
 	</target>
@@ -24,8 +20,10 @@
 		<delete dir="${doc.dir}"/>
 	</target>
 	
-	<target name="clean" description="removes all rebuildable files" depends="clean-bin,clean-dist,clean-doc">
-		<delete dir="${tmp.dir}"/>
+	<target name="clean" description="removes all rebuildable files">
+		<antcall target="clean-bin"/>
+		<antcall target="clean-dist"/>
+		<antcall target="clean-doc"/>
 	</target>
 	
 	<target name="bin" description="compiles the project">
@@ -40,6 +38,13 @@
 			<tarfileset refid="src.fileset" prefix="${ant.project.name}-src"/>
 		</tar>
 	</target>
+
+	<target name="src-dist-tbz2" description="creates a bzip2-compressed tarball source distribution">
+		<mkdir dir="${dist.dir}"/>
+		<tar destfile="${dist.dir}/${ant.project.name}-src.tar.bz2" compression="bzip2">
+			<tarfileset refid="src.fileset" prefix="${ant.project.name}-src"/>
+		</tar>
+	</target>
 	
 	<target name="src-dist-zip" description="creates a zipped source distribution">	
 		<mkdir dir="${dist.dir}"/>
@@ -48,27 +53,20 @@
 		</zip>
 	</target>
 
-	<target name="src-dist-jar" description="creates a zipped source distribution">
-		<delete dir="${tmp.dir}"/>
-		<mkdir dir="${tmp.dir}"/>
-		<javac srcdir="${src.dir}" destdir="${tmp.dir}" includes="lawu/app/SelfExtract.java"/>
+	<target name="src-dist-jar" description="creates a self-extracting jar source distribution" depends="bin">
+		<taskdef name="jarsfx" classname="lawu.ant.SelfExtractingJar" classpath="${bin.dir}"/>
 		<mkdir dir="${dist.dir}"/>
-		<jar destfile="${dist.dir}/${ant.project.name}-src.jar" filesetmanifest="mergewithoutmain">
-			<manifest>
-				<attribute name="Built-By" value="${user.name}"/>
-				<attribute name="Main-Class" value="lawu.app.SelfExtract"/>
-			</manifest>
-			<zipfileset refid="src.fileset" prefix="unpack/${ant.project.name}-src"/>
-			<fileset dir="${tmp.dir}"/>
-		</jar>
+		<jarsfx destfile="${dist.dir}/${ant.project.name}-src.jar">
+			<zipfileset refid="src.fileset" prefix="${ant.project.name}-src"/>
+		</jarsfx>
 	</target>
 	
 	<target name="src-dist" description="creates all the source distribution bundles"
-		depends="src-dist-tgz,src-dist-zip,src-dist-jar"/>
-
+		depends="src-dist-tgz,src-dist-tbz2,src-dist-zip,src-dist-jar"/> 
+	
 	<target name="bin-dist" description="creates a binary distribution" depends="bin">
 		<mkdir dir="${dist.dir}"/>
-		<jar destfile="${dist.dir}/${jar.name}" filesetmanifest="mergewithoutmain">
+		<jar destfile="${dist.dir}/${jar.name}">
 			<manifest>
 				<attribute name="Built-By" value="${user.name}"/>
 				<attribute name="Main-Class" value="${src.main}"/>
@@ -99,8 +97,7 @@
 		</javadoc>
 	</target>
 
-	<target name="doc-dist" description="creates an archive of the project documentation"
-		depends="doc">	
+	<target name="doc-dist" description="creates an archive of the project documentation" depends="doc">	
 		<mkdir dir="${dist.dir}"/>
 		<zip destfile="${dist.dir}/${ant.project.name}-doc.zip">
 			<zipfileset dir="${doc.dir}" prefix="${ant.project.name}-doc"/>
