More improvements to iterator framework, as well as additions of a few more utilities which aren't necessarily iterator-related.
git-svn-id: http://lawu.googlecode.com/svn@57 56f80a26-1f45-11de-82b5-194b17410922

--- a/trunk/iterators/build.xml
+++ b/trunk/iterators/build.xml
@@ -52,6 +52,10 @@
 	<target name="bin-dist" description="creates a binary distribution" depends="bin">
 		<mkdir dir="${dist.dir}"/>
 		<jar destfile="${dist.dir}/${dist.name}.jar">
+			<manifest>
+				<attribute name="Implementation-Title" value="${ant.project.name}"/>
+				<attribute name="Implementation-Version" value="${project.version}"/>
+			</manifest>
 			<fileset dir="${bin.dir}" includes="**/*.class"/>
 			<fileset dir="${res.dir}"/>
 		</jar>
