A bunch of changes, addition of JSON support is probably the most notable, see ChangeLog for details.
git-svn-id: http://lawu.googlecode.com/svn@58 56f80a26-1f45-11de-82b5-194b17410922

--- a/trunk/iterators/build.xml
+++ b/trunk/iterators/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project default="bin-dist" name="lawu-iterators">
+<project default="bin-dist" name="lawu">
 	<description>
 		Ant build file for the ${ant.project.name} project
 	</description>
