--- a/trunk/iterators/lawu.properties
+++ b/trunk/iterators/lawu.properties
@@ -2,6 +2,12 @@ src.dir=src
 bin.dir=bin
 dist.dir=dist
 doc.dir=doc
+lib.dir=lib
 res.dir=res
+tmp.dir=tmp
 
-project.version=0.0.2
+test.dir=test
+test.bin.dir=${tmp.dir}/test/bin
+test.report.dir=${tmp.dir}/test/report
+
+project.version=0.0.3
