Added more tests, fixed a couple of bugs in the thread classes, added periodic table info.
git-svn-id: http://lawu.googlecode.com/svn@60 56f80a26-1f45-11de-82b5-194b17410922

--- a/trunk/iterators/build.xml
+++ b/trunk/iterators/build.xml
@@ -43,16 +43,16 @@
 	</target>
 	
 	<target name="test" description="tests the project" depends="bin,test-bin">
-		<mkdir dir="${test.report.dir}"/>
-		<junit printsummary="yes" showoutput="yes" haltonfailure="yes">
-			<formatter type="plain"/>
+		<junit haltonfailure="yes" showoutput="withOutAndErr">
+			<formatter type="plain" usefile="false"/>
 			<classpath>
 				<fileset dir="${lib.dir}"/>
 				<pathelement path="${bin.dir}"/>
+				<pathelement path="${res.dir}"/>
 				<pathelement path="${test.bin.dir}"/>
 			</classpath>
-			<batchtest fork="yes" todir="${test.report.dir}">
-				<fileset dir="${test.dir}" includes="**/*Test.java"/>
+			<batchtest fork="yes">
+				<fileset dir="${test.dir}" includes="**/*.java"/>
 			</batchtest>
 		</junit>
 	</target>
