--- a/trunk/iterators/lawu.properties
+++ b/trunk/iterators/lawu.properties
@@ -1,13 +1,15 @@
 src.dir=src
+res.dir=res
+lib.dir=lib
+
+doc.dir=doc
+
 bin.dir=bin
 dist.dir=dist
-doc.dir=doc
-lib.dir=lib
-res.dir=res
-tmp.dir=tmp
 
+tmp.dir=tmp
 test.dir=test
 test.bin.dir=${tmp.dir}/test/bin
-test.report.dir=${tmp.dir}/test/report
+util.dir=util
 
 project.version=0.0.3
