Code generation ftw
git-svn-id: http://lawu.googlecode.com/svn@64 56f80a26-1f45-11de-82b5-194b17410922

--- a/trunk/iterators/lawu.properties
+++ b/trunk/iterators/lawu.properties
@@ -1,15 +1,38 @@
-src.dir=src
-res.dir=res
-lib.dir=lib
+# project version
+ant.project.version=0.0.3
 
-doc.dir=doc
+# distribution name
+ant.project.distribution.name=${ant.project.name}-${ant.project.version}
 
-bin.dir=bin
-dist.dir=dist
+# main project source; gets compiled, output is distributed 
+ant.project.source.dir=${basedir}/src
 
-tmp.dir=tmp
-test.dir=test
-test.bin.dir=${tmp.dir}/test/bin
-util.dir=util
+# project resources; copied into distribution with no changes
+ant.project.resources.dir=${basedir}/res
 
-project.version=0.0.3
+# helper libraries; needed for some part of the build process, might be included in the distribution
+ant.project.library.dir=${basedir}/lib
+
+# project tests; for quality control
+ant.project.tests.dir=${basedir}/test
+
+# utilities; not required at any step of the build process, but may be useful nonetheless
+ant.project.utilities.dir=${basedir}/util
+
+# distribution directory; collect your various bundles here
+ant.project.distribution.dir=${basedir}/dist
+
+# temporary directory; base output directory for most tasks except the distribution ones  
+ant.project.temporary.dir=${basedir}/tmp
+
+# generators directory; scripts to generate source or other project files
+ant.project.generators.dir=${basedir}/gen
+
+# generated source; don't modify these files because your changes will probably be overwritten
+ant.project.source.generated.dir=${ant.project.temporary.dir}/src-gen
+
+# compiled project
+ant.project.binary.dir=${ant.project.temporary.dir}/bin
+
+# compiled project tests
+ant.project.tests.binary.dir=${ant.project.temporary.dir}/test-bin
