--- a/trunk/iterators/.classpath
+++ b/trunk/iterators/.classpath
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" output="tmp/test/bin" path="test"/>
+	<classpathentry kind="src" output="tmp/bin" path="src"/>
+	<classpathentry kind="src" output="tmp/test-bin" path="test"/>
+	<classpathentry kind="src" output="tmp/bin" path="tmp/src-gen"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/junit.jar"/>
 	<classpathentry kind="lib" path="lib/hamcrest-core.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="output" path="tmp/bin"/>
 </classpath>
