--- a/trunk/iterators/build.xml
+++ b/trunk/iterators/build.xml
@@ -1,95 +1,100 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project default="bin-dist" name="lawu">
+<project default="make-binary-distribution" name="lawu">
 	<description>
 		Ant build file for the ${ant.project.name} project
 	</description>
 	
 	<property file="${ant.project.name}.properties"/>
 	
-	<property name="dist.name" value="${ant.project.name}-${project.version}"/>
+	<fileset id="ant.project.source.fileset" dir="${basedir}" excludes="${ant.project.distribution.dir}/**,${ant.project.temporary.dir}"/>
 	
-	<fileset id="src.fileset" dir="." excludes="${dist.dir}/**,${bin.dir}/**,${tmp.dir}"/>
-	
-	<target name="clean-bin" description="removes the build directory">
-		<delete dir="${bin.dir}"/>
-	</target>
-
-	<target name="clean-tmp" description="removes the temporary file directory">
-		<delete dir="${tmp.dir}"/>
+	<target name="clean-binary" description="removes the compiled project directory">
+		<delete dir="${ant.project.binary.dir}"/>
 	</target>
 	
-	<target name="clean-dist" description="removes the distribution directory">
-		<delete dir="${dist.dir}"/>
+	<target name="clean-distribution" description="removes the distribution directory">
+		<delete dir="${ant.project.distribution.dir}"/>
 	</target>
 	
-	<target name="clean" description="removes all rebuildable files"
-		depends="clean-bin,clean-tmp,clean-dist"/> 
+	<target name="clean-all" description="removes all rebuildable files" depends="clean-binary,clean-distribution">
+		<delete dir="${ant.project.temporary.dir}"/>
+	</target>
 	
-	<target name="bin" description="compiles the project">
-		<mkdir dir="${bin.dir}"/>
-		<depend srcdir="${src.dir}" destdir="${bin.dir}" closure="yes"/>
-		<javac srcdir="${src.dir}" destdir="${bin.dir}"/>
+	<target name="generate" description="executes the scripts that generate some project source and resources">
+		<exec executable="perl">
+			<arg value="${ant.project.generators.dir}/build.pl"/>
+			<arg value="${ant.project.source.generated.dir}"/>
+		</exec>
+	</target>
+	
+	<target name="compile" description="compiles the project" depends="generate">
+		<mkdir dir="${ant.project.binary.dir}"/>
+		<javac destdir="${ant.project.binary.dir}">
+			<src>
+				<pathelement path="${ant.project.source.dir}"/>
+				<pathelement path="${ant.project.source.generated.dir}"/>
+			</src>
+		</javac>
 	</target>	
 
-	<target name="test-bin" description="compiles the project test files" depends="bin">
-		<mkdir dir="${test.bin.dir}"/>
-		<depend srcdir="${test.dir}" destdir="${test.bin.dir}" closure="yes"/>
-		<javac srcdir="${test.dir}" destdir="${test.bin.dir}">
+	<target name="compile-tests" description="compiles the project test files" depends="compile">
+		<mkdir dir="${ant.project.tests.binary.dir}"/>
+		<javac srcdir="${ant.project.tests.dir}" destdir="${ant.project.tests.binary.dir}">
 			<classpath>
-				<fileset dir="${lib.dir}"/>
-				<pathelement path="${bin.dir}"/>
+				<fileset dir="${ant.project.library.dir}"/>
+				<pathelement path="${ant.project.binary.dir}"/>
 			</classpath>
 		</javac>
 	</target>
 	
-	<target name="test" description="tests the project" depends="bin,test-bin">
+	<target name="test" description="tests the project" depends="compile,compile-tests">
 		<junit haltonfailure="yes" showoutput="withOutAndErr">
 			<formatter type="plain" usefile="false"/>
 			<classpath>
-				<fileset dir="${lib.dir}"/>
-				<pathelement path="${bin.dir}"/>
-				<pathelement path="${res.dir}"/>
-				<pathelement path="${test.bin.dir}"/>
+				<fileset dir="${ant.project.library.dir}"/>
+				<pathelement path="${ant.project.binary.dir}"/>
+				<pathelement path="${ant.project.resources.dir}"/>
+				<pathelement path="${ant.project.tests.binary.dir}"/>
 			</classpath>
 			<batchtest fork="yes">
-				<fileset dir="${test.dir}" includes="**/*.java"/>
+				<fileset dir="${ant.project.tests.dir}" includes="**/*.java"/>
 			</batchtest>
 		</junit>
 	</target>
 	
-	<target name="src-dist-tgz" description="creates a gzipped tarball source distribution">
-		<mkdir dir="${dist.dir}"/>
-		<tar destfile="${dist.dir}/${dist.name}-src.tar.gz" compression="gzip">
-			<tarfileset refid="src.fileset" prefix="${dist.name}"/>
+	<target name="make-source-distribution-tgz" description="creates a gzipped tarball source distribution">
+		<mkdir dir="${ant.project.distribution.dir}"/>
+		<tar destfile="${ant.project.distribution.dir}/${ant.project.distribution.name}-src.tar.bz2" compression="gzip">
+			<tarfileset refid="ant.project.source.fileset" prefix="${ant.project.distribution.name}"/>
 		</tar>
 	</target>
 
-	<target name="src-dist-tbz2" description="creates a bzip2-compressed tarball source distribution">
-		<mkdir dir="${dist.dir}"/>
-		<tar destfile="${dist.dir}/${dist.name}-src.tar.bz2" compression="bzip2">
-			<tarfileset refid="src.fileset" prefix="${dist.name}"/>
+	<target name="make-source-distribution-tbz2" description="creates a bzip2-compressed tarball source distribution">
+		<mkdir dir="${ant.project.distribution.dir}"/>
+		<tar destfile="${ant.project.distribution.dir}/${ant.project.distribution.name}-src.tar.bz2" compression="bzip2">
+			<tarfileset refid="ant.project.source.fileset" prefix="${ant.project.distribution.name}"/>
 		</tar>
 	</target>
 	
-	<target name="src-dist-zip" description="creates a zipped source distribution">	
-		<mkdir dir="${dist.dir}"/>
-		<zip destfile="${dist.dir}/${dist.name}-src.zip">
-			<zipfileset refid="src.fileset" prefix="${dist.name}"/>
+	<target name="make-source-distribution-zip" description="creates a zipped source distribution">	
+		<mkdir dir="${ant.project.distribution.dir}"/>
+		<zip destfile="${ant.project.distribution.dir}/${ant.project.distribution.name}-src.zip">
+			<zipfileset refid="ant.project.source.fileset" prefix="${ant.project.distribution.name}"/>
 		</zip>
 	</target>
 	
-	<target name="src-dist" description="creates all the source distribution bundles"
-		depends="src-dist-tgz,src-dist-tbz2,src-dist-zip"/> 
+	<target name="make-source-distribution-all" description="creates all the source distribution bundles"
+		depends="make-source-distribution-tgz,make-source-distribution-tbz2,make-source-distribution-zip"/> 
 	
-	<target name="bin-dist" description="creates a binary distribution" depends="bin">
-		<mkdir dir="${dist.dir}"/>
-		<jar destfile="${dist.dir}/${dist.name}.jar">
+	<target name="make-binary-distribution" description="creates a binary distribution" depends="compile">
+		<mkdir dir="${ant.project.distribution.dir}"/>
+		<jar destfile="${ant.project.distribution.dir}/${ant.project.distribution.name}.jar">
 			<manifest>
 				<attribute name="Implementation-Title" value="${ant.project.name}"/>
-				<attribute name="Implementation-Version" value="${project.version}"/>
+				<attribute name="Implementation-Version" value="${ant.project.version}"/>
 			</manifest>
-			<fileset dir="${bin.dir}" includes="**/*.class"/>
-			<fileset dir="${res.dir}"/>
+			<fileset dir="${ant.project.binary.dir}" includes="**/*.class"/>
+			<fileset dir="${ant.project.resources.dir}"/>
 		</jar>
 	</target>
 	
@@ -116,6 +121,6 @@
 	</target>
 	-->
 	
-	<target name="dist" description="creates all distribution files"
-		depends="src-dist,bin-dist"/>
+	<target name="make-distribution-all" description="creates all distribution files"
+		depends="make-source-distribution-all,make-binary-distribution"/>
 </project>
