--- a/trunk/lawu.properties
+++ b/trunk/lawu.properties
@@ -1,20 +1,23 @@
 # project version
-ant.project.version=0.0.1
+lawu.version=0.0.1
 
 # distribution name
-ant.project.distribution.name=${ant.project.name}-${ant.project.version}
+lawu.dist.name=lawu-${lawu.version}
 
 # main project source; gets compiled, output is distributed 
-ant.project.source.dir=src
+lawu.src.dir=src
 
 # project resources; copied into distribution with no changes
-ant.project.resources.dir=res
+lawu.res.dir=res
 
 # external libraries
-ant.project.library.dir=lib
+lawu.lib.dir=lib
 
 # distribution directory; collect your various bundles here
-ant.project.distribution.dir=dist
+lawu.dist.dir=dist
 
 # compiled project
-ant.project.binary.dir=bin
+lawu.bin.dir=bin
+
+# project documentation
+lawu.doc.dir=doc
