--- a/trunk/.settings/org.eclipse.jdt.ui.prefs
+++ b/trunk/.settings/org.eclipse.jdt.ui.prefs
@@ -1,4 +1,4 @@
-#Mon Feb 08 10:14:46 EST 2010
+#Wed Mar 31 23:10:43 EDT 2010
 cleanup.add_default_serial_version_id=false
 cleanup.add_generated_serial_version_id=true
 cleanup.add_missing_annotations=true
@@ -52,6 +52,5 @@ cleanup.use_this_for_non_static_method_access_only_if_necessary=true
 cleanup_profile=_Eclipse
 cleanup_settings_version=2
 eclipse.preferences.version=1
-formatter_profile=_Eclipse
+formatter_profile=_lawu new2
 formatter_settings_version=11
-org.eclipse.jdt.ui.text.custom_code_templates=<?xml version\="1.0" encoding\="UTF-8" standalone\="no"?><templates/>
