Added a couple of iterator methods. Also reintroduced a bunch of older classes with HUGE improvements to documentation. Whew!
git-svn-id: http://lawu.googlecode.com/svn@83 56f80a26-1f45-11de-82b5-194b17410922

--- a/trunk/build.xml
+++ b/trunk/build.xml
@@ -73,7 +73,7 @@
 			access="package"
 			author="true"
 			destdir="doc"
-			doctitle="Documentation for the Lawu project"
+			doctitle="Documentation for the lawu project, version ${lawu.version}"
 			nodeprecated="false"
 			nodeprecatedlist="false"
 			noindex="false"
